--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-modal": "^13.0.1"
+    "react-native-modal": "^13.0.1",
+    "expo-notifications": "~0.29.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
