--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "expo": "~52.0.37",
+    "expo-notifications": "~0.29.13",
     "expo-speech-recognition": "^1.1.1",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-modal": "^13.0.1",
-    "expo-notifications": "~0.29.13"
+    "react-native-modal": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
